WebCore:

2009-03-04  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Bug 24337: Assert when doing sync XHR in a worker for a cacheable response.
        <https://bugs.webkit.org/show_bug.cgi?id=24337>

        Tests: http/tests/xmlhttprequest/access-control-basic-denied-preflight-cache.html
               http/tests/xmlhttprequest/workers/xmlhttprequest-file-not-found.html

        * loader/mac/ResourceLoaderMac.mm:
        (WebCore::ResourceLoader::willCacheResponse):
        An identifier is only asssigned if resource load callbacks are done.  So don't send
        willCacheResponse which uses identifier if resource load callbacks aren't being sent.

LayoutTests:

2009-03-04  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Bug 24337: Assert when doing sync XHR in a worker for a cacheable response.
        <https://bugs.webkit.org/show_bug.cgi?id=24337>

        * http/tests/xmlhttprequest/access-control-basic-denied-preflight-cache-expected.txt: Added.
        * http/tests/xmlhttprequest/access-control-basic-denied-preflight-cache.html: Added.
        * http/tests/xmlhttprequest/workers/resources/xmlhttprequest-file-not-found.js: Added.
        (log):
        (done):
        * http/tests/xmlhttprequest/workers/xmlhttprequest-file-not-found-expected.txt: Added.
        * http/tests/xmlhttprequest/workers/xmlhttprequest-file-not-found.html: Added.

Canonical link: https://commits.webkit.org/33504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41434 268f45cc-cd09-0410-ab3c-d52691b4dbfc